erDiagram
    %% Hospital Operations System - Entity Relationship Diagram
    %% Database Schema for Patient, Doctor, Admin, Appointments and Treatments
    
    USER ||--o{ ROLES_USERS : "has"
    ROLE ||--o{ ROLES_USERS : "assigned to"
    USER ||--o| DOCTOR : "has one profile"
    USER ||--o| PATIENT : "has one profile"
    
    DEPARTMENT ||--o{ DOCTOR : "contains"
    
    PATIENT ||--o{ APPOINTMENT : "books"
    DOCTOR ||--o{ APPOINTMENT : "assigned to"
    APPOINTMENT ||--o{ APPOINTMENT : "follow-up source"
    
    APPOINTMENT ||--o| TREATMENT : "has one"
    APPOINTMENT ||--o{ PAYMENT : "paid with"
    
    PATIENT ||--o{ EXPORT_JOB : "requests"
    PATIENT ||--o{ PAYMENT : "makes"
    
    USER {
        int id PK "Primary Key"
        string username UK "Unique username for login"
        string email UK "User email address"
        string phone "Contact phone number"
        string password "Hashed password"
        boolean active "Account active status"
        string fs_uniquifier UK "Flask-Security unique identifier"
        string name "Display name"
    }
    
    ROLE {
        int id PK "Primary Key"
        string name UK "Role name: admin, doctor, patient"
        string description "Role description"
    }
    
    ROLES_USERS {
        int user_id FK "Foreign Key to USER"
        int role_id FK "Foreign Key to ROLE"
    }
    
    DEPARTMENT {
        int id PK "Primary Key"
        string name UK "Department name (e.g., Cardiology)"
        string description "Department description"
    }
    
    DOCTOR {
        int id PK "Primary Key"
        int user_id FK "Foreign Key to USER"
        int department_id FK "Foreign Key to DEPARTMENT"
        string availability "Availability summary"
        string availability_days "Allowed weekdays e.g. Mon,Tue"
        string availability_start "Daily start time HH:MM"
        string availability_end "Daily end time HH:MM"
        int slot_minutes "Consultation slot duration in minutes"
        text bio "Doctor profile information"
        boolean email_notifications "Enable monthly reports"
        float appointment_cost "Fixed consultation fee in rupees"
    }
    
    PATIENT {
        int id PK "Primary Key"
        int user_id FK "Foreign Key to USER"
        text medical_history "Patient medical history"
        string notification_pref "Notification channel: email (always)"
    }
    
    APPOINTMENT {
        int id PK "Primary Key"
        int patient_id FK "Foreign Key to PATIENT"
        int doctor_id FK "Foreign Key to DOCTOR"
        string date "Appointment date YYYY-MM-DD"
        string time "Appointment time HH:MM"
        string status "Status: Booked, Completed, Cancelled"
        boolean is_follow_up "True when auto-scheduled as follow-up"
        int follow_up_source_appointment_id FK "Parent consultation appointment"
    }
    
    TREATMENT {
        int id PK "Primary Key"
        int appointment_id FK "Foreign Key to APPOINTMENT"
        text diagnosis "Medical diagnosis"
        text prescription "Prescribed medications"
        text notes "Additional doctor notes"
    }
    
    EXPORT_JOB {
        int id PK "Primary Key"
        int patient_id FK "Foreign Key to PATIENT"
        string status "Job status: pending, processing, completed, failed"
        string file_path "Path to generated CSV file"
        datetime created_at "Job creation timestamp"
        datetime completed_at "Job completion timestamp"
        text error_message "Error message if failed"
    }
    
    PAYMENT {
        int id PK "Primary Key"
        int appointment_id FK "Foreign Key to APPOINTMENT"
        int patient_id FK "Foreign Key to PATIENT"
        float amount "Payment amount in USD"
        string payment_method "Payment method: credit_card, debit_card, insurance"
        string card_last4 "Last 4 digits of card"
        string status "Payment status: pending, completed, failed, refunded"
        string transaction_id UK "Unique transaction identifier"
        datetime payment_date "Payment timestamp"
        text notes "Additional notes"
    }
